Fixed bugs, added repnode table download, and improved UI.

--- a/efi-gnt/html/css/gnt.css
+++ b/efi-gnt/html/css/gnt.css
@@ -353,8 +353,8 @@ input.email {
 
 .ui-accordion .ui-accordion-header {
     font-weight: bold;
-/*    text-transform: uppercase;*/
-/*    font-size: 110%; */
+    text-transform: uppercase;
+    font-size: 110%; 
 }
 
 .ui-state-active,
