Global style and shared lib update.

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -55,6 +55,10 @@
     background-color: #317873;
 }
 
+.system-nav a.user-mgmt {
+    background-color: SaddleBrown;
+}
+
 //#login-form {
 //    position: absolute;
 //    background-color: #fff;
