Cleaned up results page, added info to heatmap title, and changed downloaded png file name.

--- a/shortbred/html/css/shortbred.css
+++ b/shortbred/html/css/shortbred.css
@@ -301,6 +301,10 @@ textarea.options
     min-height: 500px;
 }
 
+.tab-content-normal {
+    min-height: 270px;
+}
+
 .create-job-options div {
     margin-bottom: 10px;
 }
