--- a/shortbred/html/css/heatmap.css
+++ b/shortbred/html/css/heatmap.css
@@ -20,3 +20,31 @@ form {
 .form-cb {
 }
 
+#filter-box {
+    overflow: hidden;
+    display: none;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    margin: 0;
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    padding-top: 10px;
+    background-color: white;
+    border-top: 1px solid black;
+}
+
+#filter-hide {
+    float: right;
+}
+
+#filter-box div {
+    margin-top: 5px;
+}
+#filter-bs-group div {
+    margin-bottom: 5px;
+    margin-top: 10px;
+}
+
+
