--- a/shortbred/html/css/heatmap.css
+++ b/shortbred/html/css/heatmap.css
@@ -23,20 +23,20 @@ form {
 #filter-box {
     overflow: hidden;
     display: none;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     left: 0px;
     margin: 0;
     width: 100%;
-    padding-left: 0;
+    padding-left: 9px;
     padding-right: 0;
     padding-top: 10px;
+    padding-bottom: 10px;
     background-color: white;
     border-top: 1px solid black;
 }
 
 #filter-hide {
-    float: right;
 }
 
 #filter-box div {
