--- a/html/css/buttons.css
+++ b/html/css/buttons.css
@@ -30,6 +30,16 @@ button.small {
     margin: 0;
 }
 
+button.normal {
+    border: 1px solid #bbb;
+    background-color: #ddd;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border-radius: 0px;
+}
+
 button.btn-select {
     width: 75%;
     margin: 5px;
