--- a/html/css/main.css
+++ b/html/css/main.css
@@ -145,8 +145,8 @@ form button {
 }
 
 .footer {
-    margin: auto;
-    width: 40%;
+/*    margin: auto;*/
+/*    width: 40%;*/
     padding-top: 20px;
     padding-left: 80px;
 }
@@ -157,7 +157,7 @@ form button {
 
 .footer .inline {
     float: left;
-    width: 40%;
+    width: 30%;
     margin: 0 10px;
 }
 
@@ -177,6 +177,12 @@ form button {
 .efi_logo_small {
     position: absolute;
     bottom: 5px;
+    right: 1px;
+}
+
+.i_logo_small {
+    position: absolute;
+    top: 1px;
     right: 1px;
 }
 
@@ -371,4 +377,30 @@ a.ui-button:active,
 }
 
 
+
+
+
+.nav-blocks {
+    list-style-type: none;
+}
+
+.nav-blocks td {
+    width: 460px;
+    height: 520px;
+    vertical-align: top;
+}
+
+.nav-blocks td:hover {
+    background-color: #eee;
+}
+
+.nav-blocks .block-hdr {
+    font-weight: bold;
+    font-size: 120%;
+    font-style: italic;
+}
+
+.nav-blocks td {
+    padding-bottom: 50px;
+}
 
