--- a/html/css/global.css
+++ b/html/css/global.css
@@ -92,3 +92,26 @@
     font-weight: bold;
 }
 
+.header_logo { 
+    width: 990px;
+    margin-left: 30px;
+    margin-top: 6px;
+    float: left;
+}
+
+.efi_logo_small {
+    position: absolute;
+    bottom: 5px;
+    right: 1px;
+}
+
+.logo_left {
+    float: left;
+    display: inline-block;
+}
+
+.logo_right {
+    float: right;
+    display: inline-block;
+}
+
