Made UI tweaks to size of select and checkboxes. Cleaned up gnt index.php. Changed UniRef ## to UniRef##.

--- a/html/css/shared.css
+++ b/html/css/shared.css
@@ -147,3 +147,11 @@ input[type="text"] {
     padding: 6px;
 }
 
+select.bigger {
+    font-size: 1.1em;
+}
+
+input[type=checkbox].bigger {
+    transform: scale(1.5);
+}
+
