--- a/html/css/shared.css
+++ b/html/css/shared.css
@@ -155,3 +155,52 @@ input[type=checkbox].bigger {
     transform: scale(1.5);
 }
 
+
+
+
+#container {
+    margin: 0px auto;
+    width: 1050px;
+}
+
+.content_holder { 
+    margin: auto;
+    /* margin-top: 0; */
+    width: 990px;
+    padding: 10px;
+    background: #fff;
+    min-height: 300px;
+}
+
+.footer_container {
+    margin:0px auto;
+    padding: 5px 0px;
+    background: url(../images/footerBG.png) top no-repeat;
+    height: 80px;
+    position:relative;
+    top: -15px;
+    z-index:10;
+    width:1050px;
+}
+
+.footer {
+/*    margin: auto;*/
+/*    width: 40%;*/
+    padding-top: 20px;
+    padding-left: 80px;
+}
+
+.footer .address {
+    font-size: 65%;
+}
+
+.footer .inline {
+    float: left;
+    width: 30%;
+    margin: 0 10px;
+}
+
+.job-title-container {
+    margin-bottom: 25px;
+}
+
