--- a/html/css/table.css
+++ b/html/css/table.css
@@ -8,7 +8,7 @@ table.pretty {
     border-bottom: 1px solid #aaa;
     border-right: 1px solid #aaa;
     width: 100%;
-    table-layout: fixed;
+/*    table-layout: fixed;*/
 }
 
 table.pretty td, th {
@@ -32,7 +32,7 @@ table.pretty_nested {
     border-bottom: 1px solid #aaa;
     border-right: 1px solid #aaa;
     width: 100%;
-    table-layout: fixed;
+/*    table-layout: fixed;*/
 }
 
 table.pretty_nested td, th {
