Refactored family size computation and fixed bugs in it.

--- a/efi-est/html/css/est.css
+++ b/efi-est/html/css/est.css
@@ -408,3 +408,15 @@ a.ui-button:active,
     padding-left: 20px;
 }
 
+
+
+
+.input-error {
+    color: red;
+}
+
+.input-warning {
+    color: orange;
+}
+
+
