--- a/html/css/tree.css
+++ b/html/css/tree.css
@@ -10,7 +10,7 @@ ul.tree li {
     margin: 0;
     padding: 2px 7px;
     line-height: 20px;
-    color: #369;
+    /*color: #369;*/
     font-weight: bold;
     border-left:1px solid rgb(100,100,100);
 }
@@ -30,5 +30,22 @@ ul.tree li:before {
 }
 ul.tree li:last-child:before {
    border-left:1px solid rgb(100,100,100);   
+}
+
+ul.no-deco {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li.top-level {
+    margin: 0 0 40px 0;
+    font-weight: bold;
+}
+
+span.date {
+    font-weight: normal;
+    font-style: italic;
+    font-size: 0.9em;
 }
 
