Added links to generate jobs on stepe/colorssn pages. Refactored dynamic plot code.

--- a/efi-est/html/css/est.css
+++ b/efi-est/html/css/est.css
@@ -161,7 +161,7 @@ div.acpanel {
     background-color: white;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.2s ease-out;
+//    transition: max-height 0.2s ease-out;
 }
 
 
