Updated GND to support zoom-in, zoom-out, instead of just neighbor method.

--- a/efi-gnt/html/css/diagrams.css
+++ b/efi-gnt/html/css/diagrams.css
@@ -266,6 +266,14 @@ input.filter-cb {
 }
 
 
+.auto {
+    width: auto;
+}
+.zoom-btn {
+    width: auto;
+}
+
+
 /* Popup */
 
 .info-popup {
@@ -363,5 +371,3 @@ input.filter-cb {
     width: 600px;
     left: 350px;
 }
-
-
