--- a/html/css/global.css
+++ b/html/css/global.css
@@ -131,3 +131,36 @@
     display: inline-block;
 }
 
+
+/* FORM STYLES */
+
+input.email {
+    width: 50%;
+    font-style: italic;
+    font-size: 1.1em;
+}
+
+
+/* CONTAINER STYLES */
+
+.primary-input {
+    width: 86%;
+    margin-bottom: 30px;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.primary-input input[type="text"] {
+    font-size: 1.1em;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.primary-input textarea {
+    width: 100%;
+    height: 6em;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 110%;
+}
+
