--- a/efi-est/html/css/est.css
+++ b/efi-est/html/css/est.css
@@ -66,7 +66,7 @@ h2.bold {
     font-weight: normal;
 }
 
-a {
+a, .ui-widget-content a {
     color: #7a0026;
     font-weight: bold;
 }
@@ -81,6 +81,10 @@ fieldset {
 
 form button {
     margin-top: 15px;
+}
+
+form div {
+    margin-bottom: 15px;
 }
 
 /* CONTAINERS */
@@ -226,6 +230,7 @@ textarea.options
     font-weight: bold;
     cursor: pointer;
     margin-bottom: 10px;
+    margin-top: 20px;
 }
 
 .advanced-options {
@@ -236,6 +241,10 @@ textarea.options
 
 .advanced-options div {
     margin: 10px 0;
+}
+
+.advanced-input {
+    border: 2px lightgray dashed;
 }
 
 .tab-content {
@@ -305,73 +314,6 @@ table.attributes td {
 }
 
 
-
-/* FORM INPUT */
-
-input.email {
-    width: 50%;
-    font-style: italic;
-    font-size: 1.1em;
-}
-
-/*
-.multiline-input {
-    width: 100%;
-    height: 6em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 110%;
-}
-
-input[type="text"].family-input {
-    font-size: 1.1em;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-    */
-
-.primary-input {
-    width: 86%;
-    margin-bottom: 30px;
-    margin-left: 7%;
-    margin-right: 7%;
-}
-
-.primary-input input[type="text"] {
-    font-size: 1.1em;
-    width: 100%;
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-
-.primary-input textarea {
-    width: 100%;
-    height: 6em;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 110%;
-}
-
-/* OVERRIDE JQUERY UI */
-
-.ui-accordion .ui-accordion-header {
-    font-weight: bold;
-/*    text-transform: uppercase;*/
-/*    font-size: 110%; */
-}
-
-.ui-state-active,
-.ui-widget-content .ui-state-active,
-.ui-widget-header .ui-state-active,
-a.ui-button:active,
-.ui-button:active,
-.ui-button.ui-state-active:hover {
-    background: #555;
-    color: white;
-}
-
-.ui-widget-content a {
-    color: #7a0026;
-}
 
 
 /* TUTORIAL */
