Centralized footer code. Added a button style. Fixed dashboard bug.

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -62,6 +62,9 @@
 .hl-gnt, .ui-widget-content .hl-gnt {
     color: #005591;
 }
+button.hl-gnt-bg {
+    background-color: #005591;
+}
 
 .hl-est, .ui-widget-content .hl-est {
     color: #7a0026;
