--- a/efi-gnt/html/css/gnt.css
+++ b/efi-gnt/html/css/gnt.css
@@ -1,249 +1,23 @@
-/* HTML OBJECT STYLES */
 
-body {
-    background: #ececec url(../images/bodyBG.png) repeat-y center;
-    font-family: Arial, sans-serif;
-    color: #333;
-    margin: 0px;
-}
+/* Set colors */
 
-/* Set header fonts */
 h1 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h2 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h3 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h4 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
+    color: #005591;
 }
 
-h1 { 
-    color:#005591;
-    text-transform:uppercase;
-    font-size: 240%;
-    margin:0px 0 4px 0;
-    border-bottom: none;
-    line-height: 110%;
-    font-weight: normal;
-}
-
-h2 {
-    color:#452e36;
-    font-weight: normal;
-    border-bottom: 1px solid #ccc;
-    font-size: 170%;
-    text-transform: uppercase;
-    padding: 2px;
-    margin: 10px 0px;
-}
-
-h3 {
-    font-size: 135%;
-    font-weight: normal;
-    margin: 20px 0px 3px 0px;
-}
-
-h4 {
-    font-size: 115%;
-    font-weight: normal;
-    margin: 10px 0px;
-}
-
-a:link, a:visited {
-    text-decoration: none;
-}
-
-button {
-    font-size:16px;
-    font-family:Arial;
-    font-weight:normal;
-    -moz-border-radius:8px;
-    -webkit-border-radius:8px;
-    border-radius:8px;
-    padding:10px 10%;
-    text-decoration:none;
-    display:inline-block;
-    margin-top: 6px;
-    margin-bottom: 15px;
-}
-
-button.small {
-    font-size: 100%;
-    padding: 3px 7px;
-    margin: 0;
-}
-
-a button:hover {
-}
-
-a button:active {
-    position:relative;
-    top:1px;
-}
-
-h2.bold {
-    background: #58585a;
-    font-size: 175%;
-    padding: 4px;
-    color: #ebebeb;
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-    font-weight: normal;
+h1.ruled {
+    border-bottom-color: #005591;
 }
 
 a, .ui-widget-content a {
     color: #005591;
-    font-weight: bold;
-}
-
-table td {
-    padding: 10px;
-}
-
-fieldset {
-    border-style: none;
-}
-
-form button {
-    margin-top: 15px;
-}
-
-form div {
-    margin-bottom: 15px;
-}
-
-/* CONTAINERS */
-
-.header {
-    background:url(../images/headerGB.png) top no-repeat; 
-    width: 100%; 
-    height: 128px; 
-    margin-bottom:4px;  
-}
-
-/* ELEMENTS */
-
-.header_logo { 
-    position: relative;
-    width:990px;
-    margin-left:30px;
-    margin-top:6px;
-}
-
-.efi_logo_small {
-    position: absolute;
-    bottom: 5px;
-    right: 1px;
-}
-
-h1.ruled {
-    margin: 0 0 4px 0;
-    border-bottom: 10px #005591 solid;
-    line-height: 110%;
-    font-weight: lighter;
-}
-
-div.beta h4 {
-    color: red;
-    text-align: center;
-    font-weight: bold;
-        font-size: 135%;
-}
-
-.suggestions
-{
-    background: #eee;
-    padding: 5px;
-    font-size: 20px;
-    text-align: center;
-    margin: 10px 20px 30px 20px;
-    font-weight: bold;
 }
 
 .footer a:link, .footer a:visited {
     color: #005591;
 }
 
-.center {
-    text-align: center;
-}
 
-button.light {
-    border:1px solid #dcdcdc;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(27%, #f7f7f7), color-stop(78%, #dfdfdf) );
-    background:-moz-linear-gradient( center top, #f7f7f7 27%, #dfdfdf 78% );
-    background:-ms-linear-gradient( top, #f7f7f7 27%, #dfdfdf 78% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#f7f7f7', endColorstr='#dfdfdf');
-    background-color:#f7f7f7;
-    color:#424242;
-    text-shadow:1px 1px 0px #ffffff;
-    -webkit-box-shadow:inset 1px 1px 0px 0px #ffffff;
-    -moz-box-shadow:inset 1px 1px 0px 0px #ffffff;
-    box-shadow:inset 1px 1px 0px 0px #ffffff;
-}
-button.light:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(27%, #dfdfdf), color-stop(78%, #f7f7f7) );
-    background:-moz-linear-gradient( center top, #dfdfdf 27%, #f7f7f7 78% );
-    background:-ms-linear-gradient( top, #dfdfdf 27%, #f7f7f7 78% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#dfdfdf', endColorstr='#f7f7f7');
-    background-color:#dfdfdf;
-}
-
-button.dark {
-    border:1px solid #dcdcdc;
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(27%, #000000), color-stop(78%, #333333) );
-    background:-moz-linear-gradient( center top, #000000 27%, #333333 78% );
-    background:-ms-linear-gradient( top, #000000 27%, #333333 78% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#333333');
-    background-color:#000000;
-    color:#eeeeee;
-}
-button.dark:hover {
-    background:-webkit-gradient( linear, left top, left bottom, color-stop(27%, #333333), color-stop(78%, #000000) );
-    background:-moz-linear-gradient( center top, #333333 27%, #000000 78% );
-    background:-ms-linear-gradient( top, #333333 27%, #000000 78% );
-    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#333333', endColorstr='#000000');
-    background-color:#333333;
-}
-
-td.button-col {
-    width: 25%;
-}
-
-table tr.deeper td {
-    padding: 10px;
-}
-
-textarea.options
-{
-    margin: auto;
-    padding: 10px;
-    width: 80%;
-    margin-bottom: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 110%;
-}
-
-.advanced-toggle {
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.advanced-options {
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-.advanced-options div {
-    margin: 10px 0;
-}
-
-.tab-content {
-    min-height: 500px;
-}
 
 .create-job-options div {
     margin-bottom: 10px;
@@ -257,15 +31,31 @@ textarea.options
     padding: 0 10px 10px 0;
 }
 
-#jobs table th.id-col {
-    width: 60px;
+
+
+table.pretty td.file-header-row {
+    font-weight: bold;
+    height: 40px;
+    font-size: 1.15em;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #aaa;
+    border-top: 1px solid #aaa;
 }
 
-#jobs table th.type-col {
-    width: 200px;
+table.pretty td.file-header-row-first {
+    border-top: 0;
 }
 
-#jobs table th.date-col {
-    width: 150px;
+table.no-border {
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
 }
+
+tr.file-row {
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+}
+
 
