--- a/html/css/main.css
+++ b/html/css/main.css
@@ -1,252 +1,11 @@
-/* HTML OBJECT STYLES */
-
-body {
-    background: #ececec url(../images/bodyBG.png) repeat-y center;
-    font-family: Arial, sans-serif;
-    color: #333;
-    margin: 0px;
-}
-
-/* Set header fonts */
-h1 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h2 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h3 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
-h4 {
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-}
 
 h1 { 
-    color:#333;
-    text-transform:uppercase;
-    font-size: 240%;
-    margin:0px 0 4px 0;
-    border-bottom: none;
-    line-height: 110%;
-    font-weight: normal;
+    color: #333;
 }
-
-h2 {
-    color:#452e36;
-    font-weight: normal;
-    border-bottom: 1px solid #ccc;
-    font-size: 150%;
-    text-transform: uppercase;
-    padding: 2px;
-    margin: 10px 0px;
-}
-
-h3 {
-    font-size: 135%;
-    font-weight: normal;
-    margin: 20px 0px 3px 0px;
-}
-
-h4 {
-    font-size: 115%;
-    font-weight: normal;
-    margin: 10px 0px;
-}
-
-a:link, a:visited {
-    text-decoration: none;
-}
-
-button {
-    font-size:16px;
-    font-family:Arial;
-    font-weight:normal;
-    -moz-border-radius:8px;
-    -webkit-border-radius:8px;
-    border-radius:8px;
-    padding:10px 10%;
-    text-decoration:none;
-    display:inline-block;
-    margin-top: 6px;
-    margin-bottom: 15px;
-}
-
-button.small {
-    font-size: 100%;
-    padding: 3px 7px;
-    margin: 0;
-}
-
-a button:hover {
-}
-
-a button:active {
-    position:relative;
-    top:1px;
-}
-
-h2.bold {
-    background: #58585a;
-    font-size: 175%;
-    padding: 4px;
-    color: #ebebeb;
-    font-family: 'DINPro-bold', helvetica, sans-serif;
-    font-weight: normal;
-}
-
-a {
-    color: #005591;
-}
-
-table td {
-    padding: 10px;
-}
-
-fieldset {
-    border-style: none;
-}
-
-form button {
-    margin-top: 15px;
-}
-
-/* CONTAINERS */
-
-.header {
-    background:url(../images/headerBG.png) top no-repeat; 
-    width: 100%; 
-    height: 128px; 
-    margin-bottom:4px;  
-}
-
-/* ELEMENTS */
 
 h1.ruled {
-    margin: 0 0 4px 0;
-    border-bottom: 10px #333 solid;
-    line-height: 110%;
-    font-weight: lighter;
+    border-bottom-color: #333;
 }
-
-div.beta h4 {
-    color: red;
-    text-align: center;
-    font-weight: bold;
-        font-size: 135%;
-}
-
-.suggestions
-{
-    background: #eee;
-    padding: 5px;
-    font-size: 20px;
-    text-align: center;
-    margin: 10px 20px 30px 20px;
-    font-weight: bold;
-}
-
-.footer a:link, .footer a:visited {
-    color: #005591;
-}
-
-.center {
-    text-align: center;
-}
-
-td.button-col {
-    width: 25%;
-}
-
-table tr.deeper td {
-    padding: 10px;
-}
-
-textarea.options
-{
-    margin: auto;
-    padding: 10px;
-    width: 80%;
-    margin-bottom: 30px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 110%;
-}
-
-.advanced-toggle {
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.advanced-options {
-    margin-left: 20px;
-    margin-top: 10px;
-}
-
-.advanced-options div {
-    margin: 10px 0;
-}
-
-.tab-content {
-    min-height: 500px;
-}
-
-.create-job-options div {
-    margin-bottom: 10px;
-}
-
-.create-job-options table {
-    border: 0;
-}
-
-.create-job-options table td {
-    padding: 0 10px 10px 0;
-}
-
-#jobs table th.id-col {
-    width: 60px;
-}
-
-#jobs table th.type-col {
-    width: 200px;
-}
-
-#jobs table th.date-col {
-    width: 150px;
-}
-
-/* TABLE *************************************************************************************************************/
-
-table.pretty {
-    border-collapse: collapse;
-    margin-bottom: 20px;
-    border-bottom: 1px solid #aaa;
-    border-right: 1px solid #aaa;
-    width: 100%;
-}
-
-table.pretty td, th {
-    border-left: 1px solid #aaa;
-    margin: 0;
-    padding: 7px;
-}
-
-table.pretty th {
-    background-color: #bbb;
-}
-
-table.pretty tr:nth-of-type(even) td {
-    background-color: #eee;
-}
-
-
-/* FORM INPUT */
-
-input[type="text"] {
-/*    font-size: 125%;*/
-    padding: 6px;
-}
-
-
-
 
 
 .nav-blocks {
