--- a/html/css/table.css
+++ b/html/css/table.css
@@ -26,7 +26,7 @@ table.pretty tr:nth-of-type(even) td {
 }
 
 /* Same as pretty but without the alternating row colors since we will handle that manually. */
-table.pretty_nested {
+table.pretty-nested {
     border-collapse: collapse;
     margin-bottom: 20px;
     border-bottom: 1px solid #aaa;
@@ -35,17 +35,51 @@ table.pretty_nested {
 /*    table-layout: fixed;*/
 }
 
-table.pretty_nested td, th {
+table.pretty-nested td, th {
     border-left: 1px solid #aaa;
     margin: 0;
     padding: 7px;
 }
 
-table.pretty_nested th {
+table.pretty-nested th {
     background-color: #bbb;
 }
 
 td {
     overflow-wrap: break-word;
+    padding: 10px;
 }
+
+td.button-col {
+    width: 25%;
+}
+
+td.right-align {
+    text-align: right;
+}
+
+
+/* Widget-specific styles */
+
+#jobs table th.id-col {
+    width: 60px;
+}
+
+#jobs table th.type-col {
+    width: 200px;
+}
+
+#jobs table th.date-col {
+    width: 150px;
+}
+
+.login-form td {
+    padding: 0 5px 5px 0;
+}
+
+table.tutorial {
+    border-bottom: 1px darkgray solid;
+}
+
+
 
