Cleaned up job listing on previous job pages.

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -487,6 +487,13 @@ p.p-heading {
     font-weight: bold;
 }
 
+span.job-metadata {
+    font-weight: normal;
+}
+
+span.job-name {
+    font-weight: bold;
+}
 
 
 
