--- a/efi-gnt/html/css/diagrams.css
+++ b/efi-gnt/html/css/diagrams.css
@@ -15,7 +15,6 @@ body {
     width: 100%;
     /* Set the fixed height of the footer here */
     height: 60px;
-    line-height: 30px; /* Vertically center the text there */
     background-color: #f5f5f5;
     border-top: 1px solid #312A25;
 }
@@ -54,6 +53,10 @@ body {
 
 .button-wrapper .btn-default {
     background-color: #ddd;
+}
+
+.diagram-count {
+    padding-top: 8px;
 }
 
 .search-wrapper {
