Updated table styles.

--- a/html/css/table.css
+++ b/html/css/table.css
@@ -83,3 +83,34 @@ table.tutorial {
 
 
 
+
+table.pretty td.file-header-row {
+    font-weight: bold;
+    height: 40px;
+    font-size: 1.15em;
+    border: 0;
+    background-color: white;
+}
+
+table.pretty td.file-header-row-first {
+    border-top: 0;
+}
+
+table.no-border {
+    border-left: 0;
+    border-right: 0;
+    border-top: 0;
+}
+
+tr.file-row {
+    border-left: 1px solid #aaa;
+    border-right: 1px solid #aaa;
+}
+
+tbody.file-group {
+    border: 1px solid #aaa;
+}
+
+
+
+
