--- a/efi-gnt/html/css/diagrams.css
+++ b/efi-gnt/html/css/diagrams.css
@@ -141,6 +141,11 @@ body {
     margin-top: 15px;
 }
 
+.sidebar-nav ul.dropdown-menu li {
+    margin-top: 0px;
+    padding-left: 0px;
+}
+
 .sidebar-header {
     font-weight: bold;
     text-transform: uppercase;
