Moved hmm_and_stuff from Color SSN utility to its own, Cluster Analysis.

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -577,4 +577,16 @@ div.input {
 
 
 
+.progress-loader {
+    position: fixed;
+    top:  50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    font-size: 4em;
+}
+
+.progress-loader-sm {
+    font-size: 2em;
+}
+
 
