Added support for UniRef options in GND creation.

--- a/efi-gnt/html/css/diagrams.css
+++ b/efi-gnt/html/css/diagrams.css
@@ -106,7 +106,11 @@ body {
 /* Arrows */
 
 .diagram-title {
+    font-size: 1.0em;
+}
+.diagram-title-uniref-help {
     font-size: 1.1em;
+    font-style: italic;
 }
 
 
