--- a/html/css/global.css
+++ b/html/css/global.css
@@ -303,8 +303,26 @@ input[type=checkbox].bigger {
     margin: 20px;
     padding: 7px;
     border: 3px solid black;
-    background-color: Khaki;
+    background-color: #b0b0b0;
+    color: black;
     font-size: 1.15em;
+    text-align: center;
+}
+
+.citation-message {
+    border: 3px solid black;
+    background-color: #b0b0b0;
+    color: black;
+    font-size: 1.15em;
+    text-align: center;
+    margin: 10px;
+    padding: 7px;
+}
+
+.funding-source {
+    font-weight: bold;
+    font-size: 1.25em;
+    text-transform: uppercase;
     text-align: center;
 }
 
@@ -322,9 +340,11 @@ input[type=checkbox].bigger {
     transform: rotate(-15deg);
 }
 
+/*
 .new-feature:before {
     content: "New!";
 }
+*/
 
 a.question {
     display: inline-block;
