Made the update message for EST a config value.

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -311,7 +311,7 @@ input[type=checkbox].bigger {
     margin: 20px;
     padding: 7px;
     border: 3px solid black;
-    background-color: #b0b0b0;
+    background-color: Khaki;
     color: black;
     font-size: 1.15em;
     text-align: center;
