--- a/html/efi-est/css/est.css
+++ b/html/efi-est/css/est.css
@@ -71,3 +71,15 @@ span.plot-header {
     cursor: pointer;
 }
 
+.warning {
+    color: orange;
+    margin: 20px;
+    padding: 7px;
+    border: 3px solid black;
+    background-color: #FFC300;
+    color: black;
+    font-size: 1.15em;
+    text-align: center;
+}
+
+
